--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h2>Checking</h2>
       <div class="balance">$0</div>
       <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
+      <input class="deposit" type="button" value="Deposit" id="depositC" />
       <input class="withdraw" type="button" value="Withdraw" />
     </div>
 
