--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div id="checking" class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
+      <div class="balance" id="balC">$0</div>
       <input class="input" type="text" placeholder="enter an amount" id="inputC"/>
       <input class="deposit" type="button" value="Deposit" id="depositC" />
       <input class="withdraw" type="button" value="Withdraw" />
