added withdrawl functionality

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
       <div class="balance" id="balC">0</div>
       <input class="input" type="text" placeholder="enter an amount" id="inputC"/>
       <input class="deposit" type="button" value="Deposit" id="depositC" />
-      <input class="withdraw" type="button" value="Withdraw" />
+      <input class="withdraw" type="button" value="Withdraw" id="withdrawC"/>
     </div>
 
     <div id="savings" class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
+      <div class="balance">0</div>
+      <input class="input" type="text" placeholder="enter an amount" id="inputS" />
+      <input class="deposit" type="button" value="Deposit" id="depositS" />
+      <input class="withdraw" type="button" value="Withdraw" id="withdrawS" />
     </div>
 
     <script defer src="app.js"></script>
