added saving deposit

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div id="savings" class="account">
       <h2>Savings</h2>
-      <div class="balance">100</div>
+      <div class="balance" id=balS>100</div>
       <input class="input" type="text" placeholder="enter an amount" id="inputS" />
       <input class="deposit" type="button" value="Deposit" id="depositS" />
       <input class="withdraw" type="button" value="Withdraw" id="withdrawS" />
